# sistema_recomendacao_de_produtos_por_frequencia

./: README.md  pyproject.toml  teste.pickle
sistema_recomendacao_de_produtos_por_frequencia/: main.py  recomenda_produto.py  run.py  run.spec  run_sreamlite.py  tempCodeRunnerFile.py
sistema_recomendacao_de_produtos_por_frequencia/code/: get_ip.py  qr_code_generator.py
